Bug #13231  	mysqltest: fails to dectect when mysql_next_result fails  - Packets out of order when reading cached data stored by a normal select from a ps or vice versa.  - Add pkt_nr to query cache flags